# agda

./: .authorspellings  .boring  .cvsignore  .darcsignore  .dropbox_uploader.enc  .editorconfig  .envrc  .ghci  .ghci-8.0  .ghci-8.10  .ghci-8.2  .ghci-8.4  .ghci-8.6  .ghci-8.8  .ghci-9.0  .ghci-9.0.2  .ghci-9.2.2  .ghci-9.2.3  .ghci-9.2.4  .ghci800  .ghci820  .ghci860  .ghci880  .gitignore  .gitmodules  .hlint.yaml  .mailmap  .readthedocs.yaml  .stylish-haskell.yaml  .travis.yml  Agda.cabal  Agda.cabal.win  Algebra.agda  AllNonAsciiChars.hs  CHANGELOG  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Coinduction.agda  Dockerfile  (+118 more)
ffi/: agda-lib-ffi.cabal
ffi/Data/: FFI.hs
ffi/IO/: FFI.hs
ffi/Level/: FFI.hs
src/agda-bisect/: Bisect.hs  Makefile  README.md  agda-bisect.cabal
src/agda-licences/: Main.hs  agda-licences.cabal
src/agda-pkg/: LICENSE  Main.hs  Setup.hs  agda-pkg.cabal
src/closed-issues/: closed-issues-for-milestone.cabal
src/find-cycles/: FindCycles.hs  README.md  find-cycles.cabal
src/fix-agda-whitespace/: FixWhitespace.hs  ParseConfig.hs  fix-agda-whitespace.cabal  fix-whitespace.cabal
src/hTags/: Main.hs  Makefile  Tags.hs  create-github-ci.sh  github-ci.patch  hTags.cabal  stack-8.0.2.yaml  stack-8.10.2.yaml  stack-8.10.3.yaml  stack-8.10.4.yaml  stack-8.2.2.yaml  stack-8.4.4.yaml  stack-8.6.5.yaml  stack-8.8.4.yaml
src/main/: .cvsignore  Agda-executable.cabal  LICENSE  Main.hs  Makefile  Setup.hs  main.c
src/main_agdaghci/: Agda-ghci.cabal  Main.hs
src/rts/: Makefile  RTP.agda  RTP.hs  Setup.hs  agda-rts.cabal
src/size-solver/: Main.hs  Makefile  Parser.hs  size-solver.cabal
src/transl/: ChangeLog  INSTALL  Main.hs  Makefile  README  Translator.hs  agda1to2.cabal  translate.hs
test/: AbsurdPattern.agda  AgdaDisabledTests.hs  Berry.agda  CompilerTest.hs  DocTestMain.hs  Internal.hs  InternalTests.hs  Lambda.agda  Main.hs  Makefile  Operators.agda  Printf.agda  README.md  Tasty.hs  Utils.hs  agda-tests-ffi.cabal  agda-tests.cabal  bad.agda  builtin.agda  check-mdo.sh  core.agda  list.agda  local.agda  no-option-double-check.sh  optionsPragma.agda  para.agda  proofIrr.agda  run-agda-wasm.sh  simple.agda  test-suite-covers-errors.sh  test-suite-covers-warnings.sh  test.agda
test/Bugs/: Issue1023.err  Issue1075.agda  Issue1075.err  Issue1428.agda  Issue1431.agda  Issue1431.err  Issue2636.err  Issue3027.err  Issue3027b.err  Issue325b.agda  Issue325b.err  Issue3544.agda  Issue3544.err  Issue3870.agda  Issue3898.agda  Issue3898.err  Issue3903.agda  Issue3903.err  Issue3930.err  Issue4016.err  Issue4179.err  Issue4251.agda  Issue4251.err  Issue4408.agda  Issue4408.err  Issue4408b.err  Issue4755b.agda  Issue4755b.err  Issue5007-sizedtypes.agda  Issue5007-sizedtypes.err  Issue5837.err  Issue6660-List.agda  Issue6660-List.err  Issue6660-greet-nosig.err  Issue6660-greet.err  Issue6660-sized-Stream.agda  Issue6660-sized-Stream.err  Issue8182.agda  Issue8182.err  Issue8263.agda  (+24 more)
test/BuildFail/: Issue7912.err  Issue7988.err  LibTooFarDown.err  NoLibraryFile.err  Tests.hs
test/BuildSucceed/: Tests.hs
test/Common/: Bool.agda  Char.agda  Coinduction.agda  Equality.agda  FFI.hs  Float.agda  IO.agda  Integer.agda  Irrelevance.agda  Issue481ParametrizedModule.agda  Level.agda  List.agda  MAlonzo.agda  Makefile  Maybe.agda  Nat.agda  Path.agda  Prelude.agda  Product.agda  Reflect.agda  Reflection.agda  SafePrelude.agda  Sigma.agda  Size.agda  String.agda  Sum.agda  TC.agda  Unit.agda
test/Compiler/: Tests.hs
test/CubicalSucceed/: Issue5956.agda  Tests.hs
test/Exec/: Tests.hs
test/Fail/: AbsToConDecl.err  AbsentRHSRequiresAbsurdPattern.agda  AbsentRHSRequiresAbsurdPattern.err  Abstract.err  AbstractBlockInLet.agda  AbstractBlockInLet.err  AbstractGuardednessPreservingTypeConstructors.agda  AbstractGuardednessPreservingTypeConstructors.err  AbstractModuleMacro.agda  AbstractModuleMacro.err  AbstractTermination.agda  AbstractTermination.err  AbstractTypeProjectionLike.agda  AbstractTypeProjectionLike.err  AbsurdPatternNotUnused.agda  AbsurdPatternNotUnused.err  AbsurdPatternUnguardedRecord.agda  AbsurdPatternUnguardedRecord.err  AgdalightTelescopeSyntax.err  AmbiguousConstructor.agda  AmbiguousConstructor.err  AmbiguousModule.agda  AmbiguousModule.err  AmbiguousName.agda  AmbiguousName.err  AmbiguousNameFromImportParameterized.agda  AmbiguousNameFromImportParameterized.err  AmbiguousParseForApplication.agda  AmbiguousParseForApplication.err  AmbiguousParseForLHS.err  AmbiguousQuote.agda  AmbiguousQuote.err  AmbiguousSet1.agda  AmbiguousSet1.err  AmbiguousSet1b.agda  AmbiguousSet1b.err  AmbiguousTopLevelModuleName.err  AnonymousImport.agda  AnonymousImport.err  AnonymousRecConstrAbstract.agda  (+3796 more)
test/Interactive/: Issue1430.agda  Issue1430.in  Issue1430.stdout.expected  Load.agda  Load.in  Load.stdout.expected  LoadTwice.in  LoadTwice.stdout.expected  LoadTwice1.agda  LoadTwice2.agda  Naked.in  Naked.stdout.expected  Tests.hs
test/Internal/: Helpers.hs  TestHelpers.hs  Tests.hs  TypeChecking.hs  Version.hs
test/InternalTests/: Helpers.hs  TypeChecking.hs
test/LaTeXAndHTML/: Tests.hs
test/LatexBackend/: Tests.hs
test/LibSucceed/: CoInf.agda  Issue1382.agda  Issue421.agda  Issue4312.agda  Issue854.lagda  Issue924.agda  Makefile  SizeInconsistentMeta4.agda  TerminationSized.agda  Tests.hs  lib-succeed.agda-lib
test/Succeed/: AbstractCoinduction.agda  AbstractData.agda  AbstractMutual.agda  AbsurdIrrelevance.agda  AbsurdMatchIsNeutral.agda  AbsurdPattern.agda  AbsurdPatternGuardedRecord.agda  AbsurdPatternRequiresAbsentRHS.agda  AbsurdPatternRequiresAbsentRHS.warn  AbsurdPatternRequiresNoRHS.warn  AgdaAbstractMachine.agda  AnonymousDecl.agda  AnonymousImport.agda  AnonymousModuleWithParameter.agda  AnonymousRecConstr.agda  AnonymousRecConstrAbstract.agda  AnonymousRecConstrCopy.agda  AnonymousRecConstrCopy2.agda  AnonymousRecConstrCopy3a.agda  AnonymousRecConstrCopy3b.agda  AnonymousRecConstrImport.agda  AnonymousRecConstrInline.agda  AnonymousRecConstrQual.agda  AnonymousRecConstrQuote.agda  AnonymousRecConstrRename.agda  AntiUnifyBug.agda  (+2095 more)
(+10344 files in other folders)
